cms view alignment fixed

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -23,7 +23,8 @@ height: 100vh;">
                                 <input matInput placeholder="Email or Username " formControlName="email" required>
                                 <mat-error class="error" *ngIf="userNameFormControl.hasError('required')">
                                     <i class="fa fa-exclamation-circle mr-2"></i>
-                                    Email or Username is <strong>required!</strong></mat-error>
+                                    Email or Username is <strong>required!</strong>
+                                </mat-error>
                             </mat-form-field>
                         </div>
                         <div class="login-form">
