--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -3,7 +3,7 @@
       <div class="card-header">
         <div class="copyright text-center">
           Copyright &copy; {{currentYear | date: 'yyyy'}}
-          <a href="http://infinfotech.com" target="_blank">DR. REYAD DENTAL PERFECTION</a> All rights reserved.
+          <a target="_blank">DR. REYAD DENTAL PERFECTION</a> All rights reserved.
         </div>
       </div>
     </div>
