--- a/src/assets/scss/core/_navbar.scss
+++ b/src/assets/scss/core/_navbar.scss
@@ -1,3 +1,5 @@
+@import '../core/mixins/colored-shadows';
+@import '../core/mixins/vendor-prefixes';
 .navbar {
     border: 0;
     border-radius: $border-radius-base;
@@ -29,7 +31,7 @@
 
             & .material-icons,
             & .fa{
-                font-size: $font-size-lg;
+                // font-size: $font-size-lg;
                 max-width: 24px;
                 margin-top: -1.1em;
             }
@@ -115,7 +117,7 @@
         position: relative;
         color: inherit;
         height: 50px;
-        font-size: $navbar-brand-font-size - 0.125;
+        // font-size: $navbar-brand-font-size - 0.125;
         line-height: 30px;
         padding: $padding-general-y 0;
         font-weight: 300;
@@ -209,7 +211,7 @@
 
           & .material-icons,
           & .fa{
-              font-size: $font-size-lg;
+              // font-size: $font-size-lg;
               max-width: 24px;
               margin-top: -1.1em;
           }
