--- a/src/assets/scss/core/_sidebar-and-main-panel.scss
+++ b/src/assets/scss/core/_sidebar-and-main-panel.scss
@@ -1,3 +1,4 @@
+@import '../core/mixins/animations';
 .wrapper {
   position: relative;
   top: 0;
@@ -396,7 +397,7 @@
   position: relative;
   float: right;
   width: $sidebar-width;
-  @include transition (0.33s, cubic-bezier(0.685, 0.0473, 0.346, 1));
+  // @include transition (0.33s, cubic-bezier(0.685, 0.0473, 0.346, 1));
 
   .main-content {
     /*margin-top: 70px;*/
