--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,66 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
 
 /* Importing Bootstrap SCSS file. */
 @import 'bootstrap/scss/bootstrap';
+
+/* You can add global styles to this file, and also import other style files */
+.ant-picker-calendar-header .ant-picker-calendar-mode-switch {
+  display: none !important;
+}
+
+.forBudgetClass nz-list-header.ant-list-header {
+  font-size: 20px !important;
+  font-weight: 600 !important;
+}
+
+.mat-mdc-dialog-title {
+  margin: 0 0 0px !important;
+  display: block;
+}
+
+.close {
+  float: right;
+  font-size: 1.5rem;
+  font-weight: 500;
+  line-height: 1;
+  color: #000;
+  text-shadow: 0 1px 0 #ffffff;
+  opacity: .5;
+}
+
+.close:hover {
+  color: #000;
+  text-decoration: none
+}
+
+.close:not(:disabled):not(.disabled):hover,
+.close:not(:disabled):not(.disabled):focus {
+  opacity: .75
+}
+
+button.close {
+  padding: 0;
+  background-color: transparent;
+  border: 0;
+  -webkit-appearance: none;
+  appearance: none;
+  padding-top: 15px;
+}
+
+a.close.disabled {
+  pointer-events: none
+}
+
+.my-pagination {
+  float: right;
+}
