--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,9 @@ body {
 
 body {
   margin: 0;
+  color: #3C4858;
+  font-weight: 300;
+  background-color: #eee !important;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
@@ -59,4 +62,28 @@ button.close {
 
 a.close.disabled {
   pointer-events: none
+}
+
+.mdc-snackbar {
+  border-radius: 4px;
+
+  &.submit-info {
+    color: #ffffff;
+    background-color: #00bcd4 !important;
+  }
+
+  &.submit-success {
+    color: #ffffff;
+    background-color: #076404 !important;
+  }
+
+  &.submit-error {
+    color: #fff;
+    background-color: #f44336;
+  }
+
+  &.submit-warning {
+    color: #fff;
+    background-color: #fd7e14;
+  }
 }
