--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -87,10 +87,10 @@ button#menu-toggle-2 {
 }
 
 .main-panel .main-content {
-  margin-top: 45px !important;
-  padding: 0px 10px;
+  margin-top: 45px;
+  padding: 30px 15px;
   padding-top: 0px;
-  min-height: calc(95.5vh - 123px);
+  min-height: calc(95.5vh - 125px);
 }
 
 .navbar.navbar-transparent {
