inoice form and items

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -69,5 +69,5 @@
       </div>
     </nav>
   </div>
-  <mat-progress-bar *ngIf="showProgressBar" mode="indeterminate"></mat-progress-bar>
+  <mat-progress-bar *ngIf="showProgressBar" mode="query"></mat-progress-bar>
 </div>
