--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,10 +16,6 @@ body {
 /* Importing Bootstrap SCSS file. */
 @import 'bootstrap/scss/bootstrap';
 
-.mat-mdc-dialog-title {
-  margin: 0 0 0px !important;
-  display: block;
-}
 
 .close {
   float: right;
@@ -74,4 +70,13 @@ a.close.disabled {
 
 .search {
   margin-bottom: 6px;
+}
+
+.mat-mdc-dialog-actions {
+  margin: 0 18px 18px !important;
+}
+
+.mdc-button__label {
+  display: flex;
+  align-items: center;
 }
