--- a/src/app/modules/website-manager/book-appointment/book-appointment.component.html
+++ b/src/app/modules/website-manager/book-appointment/book-appointment.component.html
@@ -83,7 +83,7 @@
                                                     </nz-alert>
                                                 </div>
 
-                                                <div class="col-md-12 mt-2 pt-2 pb-2" *ngFor="let specialtyGroup of bookAppointmentPageForm.get('specialties')?.value;
+                                                <div class="col-md-12 mt-2 pt-2 pb-2" *ngFor="let specialtyGroup of specialtyFormArray.controls;
                                                         let i = index; 
                                                         let isLast = last; 
                                                         let isFirst = first" [formGroupName]="i">
