--- a/src/app/modules/website-manager/dentists/working-process/working-process.component.html
+++ b/src/app/modules/website-manager/dentists/working-process/working-process.component.html
@@ -64,7 +64,7 @@
                             nzDescription="3 processes will be good fit for your website." nzShowIcon>
                         </nz-alert>
                     </div>
-                    <div class="col-md-12 mt-2 pt-2 pb-2" *ngFor="let ProcessGroup of workingProcessForm.get('processes')?.value; 
+                    <div class="col-md-12 mt-2 pt-2 pb-2" *ngFor="let ProcessGroup of processFormArray; 
                                                         let i = index; 
                                                         let isLast = last; 
                                                         let isFirst = first" [formGroupName]="i">
