--- a/src/app/modules/website-manager/home/footer-section/footer-section.component.html
+++ b/src/app/modules/website-manager/home/footer-section/footer-section.component.html
@@ -58,7 +58,7 @@
                                 nzDescription="8 Quick Links will be good fit for your website." nzShowIcon>
                             </nz-alert>
                         </div>
-                        <div class="col-md-12 mt-2 pt-2 pb-2" *ngFor="let linkGroup of footerForm.get('quick_links')?.value; 
+                        <div class="col-md-12 mt-2 pt-2 pb-2" *ngFor="let linkGroup of quickLinksArray.controls; 
                                                         let i = index; 
                                                         let isLast = last; 
                                                         let isFirst = first" [formGroupName]="i">
