--- a/src/app/modules/website-manager/home/who-we-are/who-we-are.component.html
+++ b/src/app/modules/website-manager/home/who-we-are/who-we-are.component.html
@@ -100,7 +100,7 @@
                                 nzDescription="3 features will be good fit for your website." nzShowIcon>
                             </nz-alert>
                         </div>
-                        <div class="col-md-12 mt-2 pt-2 pb-2" *ngFor="let featureGroup of whoWeAreForm.get('features')?.value; 
+                        <div class="col-md-12 mt-2 pt-2 pb-2" *ngFor="let featureGroup of featureCardsFormArray.controls; 
                                                         let i = index; 
                                                         let isLast = last; 
                                                         let isFirst = first" [formGroupName]="i">
